tests/fsharp/typecheck/sigs/neg129.bsl

neg129.fs(67,47,67,54): typecheck error FS0043: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type:  ^output

Known type parameters: < bigint ,  ^output >

Candidates:
 - static member witnesses.convert_witness: x: bigint * _output: Complex -> Complex
 - static member witnesses.convert_witness: x: bigint * _output: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint * _output: byte -> byte
 - static member witnesses.convert_witness: x: bigint * _output: decimal -> decimal
 - static member witnesses.convert_witness: x: bigint * _output: float -> float
 - static member witnesses.convert_witness: x: bigint * _output: float32 -> float32
 - static member witnesses.convert_witness: x: bigint * _output: int16 -> int16
 - static member witnesses.convert_witness: x: bigint * _output: int32 -> int
 - static member witnesses.convert_witness: x: bigint * _output: int64 -> int64
 - static member witnesses.convert_witness: x: bigint * _output: sbyte -> sbyte
 - static member witnesses.convert_witness: x: bigint * _output: uint16 -> uint16
 - static member witnesses.convert_witness: x: bigint * _output: uint32 -> uint32
 - static member witnesses.convert_witness: x: bigint * _output: uint64 -> uint64
